# agentspan

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SKILL.md  mkdocs.yml  package-lock.json  package.json  serve-docs.sh
autopilot/: QUICKSTART.md  README.md  __main__.py  pyproject.toml
autopilot/agents/deep_researcher/: agent.yaml  expanded_prompt.md  run.py  run_interactive.py
autopilot/src/agentspan_autopilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
autopilot/src/autopilot/: INTEGRATIONS.md  WORKERS.md  __init__.py  config.py  loader.py  registry.py
autopilot/tests/: conftest.py  test_commands.py  test_config.py  test_loader.py  test_registry.py
autopilot/tests/e2e/: conftest.py  test_agent_runs.py  test_agent_scenarios.py  test_conversations.py  test_deploy.py  test_direct_query.py  test_long_conversation.py  test_tui_conversations.py
autopilot/tests/test_credentials/: test_acquisition.py
autopilot/tests/test_integrations/: test_doc_reader.py  test_github.py  test_gmail.py  test_google_analytics.py  test_google_calendar.py  test_google_drive.py  test_hubspot.py  test_imessage.py  test_jira.py  test_linear.py  test_local_fs.py  test_mcp.py  test_notion.py  test_outlook.py  test_s3.py  test_salesforce.py  test_slack.py  test_web_search.py  test_whatsapp.py
autopilot/tests/test_orchestrator/: test_gates.py  test_retry.py  test_server.py  test_state.py  test_tools.py
autopilot/tests/test_tui/: test_dashboard.py  test_events.py  test_notifications.py  test_poller.py  test_sessions.py
sdk/python/: .env.example  AGENTS.md  CLAUDE.md  GUARDRAIL_GUIDE.md  LICENSE  Makefile  README.md  app.js  pyproject.toml  requirements.txt  run.sh
sdk/python/.contextbook/: implementation_plan.md  issue_context.md  module_map.md  test_plan.md
sdk/python/chatbot/: setup.sh
sdk/python/conductor_workers/: __init__.py  config.py
sdk/python/docs/: agent-configuration.md
sdk/python/e2e/: conftest.py  test_suite10_code_execution.py  test_suite10_guardrails.py  test_suite11_langgraph.py  test_suite12_termination_gates.py  test_suite13_callbacks.py  test_suite14_stateful_domain.py  test_suite14_tool_retry_config.py  test_suite15_skills.py  test_suite1_basic_validation.py  test_suite2_tool_calling.py  test_suite3_cli_tools.py  test_suite4_mcp_tools.py  test_suite5_http_tools.py  test_suite6_pdf_tools.py  test_suite7_media_tools.py  test_suite8_guardrails.py  test_suite9_handoffs.py
sdk/python/examples/: 01_basic_agent.py  02_tools.py  02a_simple_tools.py  02b_multi_step_tools.py  03_structured_output.py  04_http_and_mcp_tools.py  04_mcp_weather.py  04_mcp_weather_zip_code.py  05_handoffs.py  06_sequential_pipeline.py  07_parallel_agents.py  08_router_agent.py  09_human_in_the_loop.py  09b_hitl_with_feedback.py  09c_hitl_streaming.py  09d_human_tool.py  09e_signals.py  100_issue_fixer_agent.py  101_study_agent.py  102_deep_research_agent.py  10_guardrails.py  11_streaming.py  12_long_running.py  13_hierarchical_agents.py  14_existing_workers.py  15_agent_discussion.py  16_credentials_isolated_tool.py  16_random_strategy.py  16_retry_configuration.py  16b_credentials_non_isolated.py  16c_credentials_cli_tools.py  16d_credentials_gh_cli.py  16e_credentials_http_tool.py  16f_credentials_mcp_tool.py  16g_credentials_framework_passthrough.py  16h_credentials_external_worker.py  16i_credentials_langchain.py  16j_credentials_openai_sdk.py  16k_credentials_google_adk.py  17_swarm_orchestration.py  (+111 more)
sdk/python/scripts/: run_examples.sh
sdk/python/src/: evaluator.py
sdk/python/tests/: _worker_harness.py  conftest.py  count_workers.py  run_compilation_comparison.sh  test_kitchen_sink.py
sdk/python/validation/: .env  .env.example  DESIGN.md  README.md  _env.py  analysis.py  config.py  cross_judge.py  discovery.py  display.py  execution.py  groups.py  judge.py  models.py  orchestrator.py  output.py  runner.py  (+7 more)
(+1866 files in other folders)
